TEST_PROGRAMS/VALID/05/slice_dec.go
/* Slice declaration. */

package main

var slice [] int

func main() {
	// Do nothing
}
