TEST_PROGRAMS/INVALID/04/24.go
package main

func main() {
    //Illegal slice type
    var x []
             a
}
